# ops-committee

./: .gitignore  README.md  openenv.yaml  pyproject.toml
agents/: __init__.py  committee.py
artifacts/: eval_results.json  eval_summary.csv
ops_committee_env/: __init__.py  compat.py  models.py
ops_committee_env/server/: __init__.py  app.py  ops_committee_environment.py  scenarios.py  system_state.py  tools.py
scripts/: run_demo.py
tests/: test_phase1_state_machine.py  test_phase2_committee.py  test_phase3_eval_pipeline.py  test_training_pipeline.py
training/: eval.py  ops_committee_colab.ipynb  train_trl_colab.py
